Added and documented missing modules for QoSHandler, SizeLimitHandler and ThreadLimitHandler.
Moved SizeLimitHandler from oej.server to oej.server.handler.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>